2005-06-20  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (anchor): add cgi_name for valid html
	outputs.

	* hiki/repos/default.rb (get_revision, revisions): add new
	methods.
	* misc/plugin/history.rb: support default repos. not display
	'[Diff to ]' if the page has only one revision.

2005-06-17  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/page.rb (out): accept headers hash as an argument.
	* hiki/command.rb (generate_error_page): add a new method to
	display an error page.
	* template/error.html: add a new template file.

	* misc/plugin/attach/attach.rb (attach_download): display an error
	message if the file does not exist. use
	'export_plugin_methods' (by Yazawa).
	* misc/plugin/attach/attach.cgi: use Hiki::Utils::redirect (by
	Yazawa).

2005-06-16  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/command.rb (cmd_login), messages/en.rb, messages/fr.rb,
	messages/it.rb, messages/ja.rb,
	template/login.html (msg_login_failure): show a message when login
	failure.

2005-06-16  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb (save): raise an exception with informations
	about the incompatibility.
	* hiki/plugin.rb (load, load_backup): add methods which are
	aliases of HikiDB#load and HikiDB#load_backup.

	* hiki/db/flatfile.rb (store): add 'preserve' option to keep
	modified time.

	* hiki/repos/svn.rb (revisions): use Time#strftime instead of
	Time#to_s since Time#to_s may contains SJIS characters in mingw32
	ruby (suggest by Atsushi Koga).
	* view/template.html: ditto.

	* hiki/command.rb (cmd_edit): support editing with a specified
	revision.
	* misc/plugin/history.rb: add a link to revert to a specified
	revision.

	* hiki/repos/cvs.rb (get_revision, revisions): add new methods.
	* hiki/repos/svn.rb (get_revision, revisions): ditto.
	* misc/plugin/history.rb: follow the changes.

	* hiki/plugin.rb (Hiki::Plugin): add new instance variable @data.
	* hiki/command.rb (generate_page): merge @plugin.data to control
	parameters from plugins.
